# Myrient_Search_App

./: .gitignore  README.md  config.ini  pyproject.toml
.github/workflows/: codeql.yml
src/: backend.py  config_defaults.py  crawler.py  downloader.py  gui.py  main.py  tui.py
