[project]
name = "myrient-search-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.15",
    "bs4>=0.0.2",
    "customtkinter>=5.2.2",
    "lxml>=6.0.0",
    "pyinstaller>=6.15.0",
    "requests>=2.32.4",
]
